added 1.Ftp Connections ,2. Added Morgan Loggers.,3 Added Download logic.
